maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:25: error: ':' expected but ')' found.
def isDirectionFree(dir) {
                       ^Escaper:54: error: identifier expected but '}' found.
}
^